# task_scheduler

./: .gitignore  README.md  docker-compose.yaml
docs/: .$high_level_design.drawio.bkp  high_level_design.drawio
observability/: collector-config.yml  docker-compose.trace.yml
tasks_api/: .env  Dockerfile  docker-entrypoint.sh  pyproject.toml
tasks_api/app/: config.py  main.py  otel.py
tasks_api/app/api_layer/: api_enums.py  api_layer_interfaces.py  errors.py
tasks_api/app/api_layer/responses/: base_responses.py  route_responses.py
tasks_api/app/api_layer/responses/docs/: schedule_new_task_responses.py  utils.py
tasks_api/app/api_layer/routes/: timer_router.py
tasks_api/app/data_access_layer/: abstract_data_access.py  db_design.txt  errors.py  tasks_db_access.py
tasks_api/app/data_access_layer/postgres/: base_model.py  concrete_data_access.py  database.py  models.py
tasks_api/app/logic_layer/: errors.py  logic_layer_actions.py  logic_layer_interfaces.py
tasks_api/app/logic_layer/request_handlers/: handler_set_new_timer.py
tasks_api/app/tests/api_contract/: _test_get_timer_status.py  test_schedule_new_task_contract.py
tasks_api/app/utils/: base_error.py  enums.py  validators.py
